--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.username=root
 spring.datasource.password=password
 
 server.port=9090
+
+couponService.url =http://localhost:8080/couponapi/coupons/
