--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/mydb
+spring.datasource.url=jdbc:mysql://productcouponservicedb.ctxw7exwnldw.ap-south-1.rds.amazonaws.com:3306/mydb
+
 spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.password=12345678
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+server.port=5000
 
-server.port=9090
-
-couponService.url =http://localhost:9091/couponapi/coupons/
+couponService.url =http://couponservice-dev1.eba-drk4ajwu.ap-south-1.elasticbeanstalk.com/couponapi/coupons/
