--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
-spring.datasource.url=jdbc:mysql://productcouponservicedb.ctxw7exwnldw.ap-south-1.rds.amazonaws.com:3306/mydb
+spring.datasource.url=jdbc:mysql://application-db-server:3306/mydb
 
 spring.datasource.username=root
 spring.datasource.password=12345678
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-server.port=5000
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+server.port=8081
 
-couponService.url =http://couponservice-dev1.eba-drk4ajwu.ap-south-1.elasticbeanstalk.com/couponapi/coupons/
+couponService.url =http://coupon-service-app:8080/couponapi/coupons/
